[package]
name = "pico_pixels_over_ftdi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmem = "0.1.1"
pixels = "0.11.0"
winit = "0.28.2"
winit_input_helper = "0.14.0"


[dependencies.libftd2xx]
version = "0.32.2"
# statically link the vendor library, defaults to dynamic if not set
# this will make things "just work" on Linux and Windows
features = ["static"]
